; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/cxgb/extr_cxgb_main.c_cxgbc_mod_event.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/cxgb/extr_cxgb_main.c_cxgbc_mod_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@t3_list_lock = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"T3 adapters\00", align 1
@MTX_DEF = common dso_local global i32 0, align 4
@t3_list = common dso_local global i32 0, align 4
@EBUSY = common dso_local global i32 0, align 4
@t3_uld_list = common dso_local global i32 0, align 4
@t3_uld_list_lock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8*)* @cxgbc_mod_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cxgbc_mod_event(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  store i32 0, i32* %7, align 4
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %23 [
    i32 129, label %9
    i32 128, label %13
  ]

9:                                                ; preds = %3
  %10 = load i32, i32* @MTX_DEF, align 4
  %11 = call i32 @mtx_init(i32* @t3_list_lock, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 0, i32 %10)
  %12 = call i32 @SLIST_INIT(i32* @t3_list)
  br label %23

13:                                               ; preds = %3
  %14 = call i32 @mtx_lock(i32* @t3_list_lock)
  %15 = call i32 @SLIST_EMPTY(i32* @t3_list)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %20, label %17

17:                                               ; preds = %13
  %18 = load i32, i32* @EBUSY, align 4
  store i32 %18, i32* %7, align 4
  %19 = call i32 @mtx_unlock(i32* @t3_list_lock)
  br label %23

20:                                               ; preds = %13
  %21 = call i32 @mtx_unlock(i32* @t3_list_lock)
  %22 = call i32 @mtx_destroy(i32* @t3_list_lock)
  br label %23

23:                                               ; preds = %3, %20, %17, %9
  %24 = load i32, i32* %7, align 4
  ret i32 %24
}

declare dso_local i32 @mtx_init(i32*, i8*, i32, i32) #1

declare dso_local i32 @SLIST_INIT(i32*) #1

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @SLIST_EMPTY(i32*) #1

declare dso_local i32 @mtx_unlock(i32*) #1

declare dso_local i32 @mtx_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
